started adding adding email verification, lots to do still
